# BerlinHackBuena

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Claude Design_Guidance.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PRD_Overview  PROJECT_VISUAL_GUIDE.html  README.md  docker-compose.yml  gemini.md  pitch_background.md  prompt.md  pyproject.toml  requirements.txt  simulation.md
02/1d34980767/: metadata.json
03/999c4c2dbf/: metadata.json
0f/f2e67272a5/: metadata.json
22/2bf1884b29/: metadata.json
24/4cbf5169ee/: metadata.json
28/177e7a9a20/: metadata.json
58/ef33124c54/: metadata.json
5f/9325840135/: metadata.json
60/55a5fd5d40/: metadata.json
83/300abccbaf/: metadata.json
95/5f2ea2a700/: metadata.json
app/: __init__.py  ingestion.py  main.py
app/core/: config.py
app/schemas/: agents.py  buildings.py  health.py  human_notes.py  patch_plan.py  webhook.py
app/services/: agent_audit.py  agent_specialists.py  agent_supervisor.py  agent_tools.py  building_memory.py  classify.py  conflict.py  context_agent.py  context_guard.py  context_writer.py  events.py  extract.py  human_notes.py  (+8 more)
context_engine/: __init__.py  agent.py  ai.py  chat_agent.py  cli.py  intake_agent.py  parsers.py  patcher.py  qa.py  renderer.py  schema_registry.py  store.py  utils.py  web.py
docs/: DEMO.md  DEPLOYMENT.md
frontend/: next.config.mjs  package-lock.json  package.json
schema/: CLAUDE.md  DEEP_AGENT.md  HERMES_LOOP.md  LEGAL_MAP.md  VOCABULARY.md  WIKI_SCHEMA.md
schemas/: CHAT_AGENT_SCHEMA.md  CONTEXT_WRITE_SCHEMA.md  INGESTION_PROCESS_SCHEMA.md  PARSER_SCHEMA.md  PATCH_SCHEMA.md  RENDER_SCHEMA.md  RESOURCE_VALIDATION_SCHEMA.md
scripts/: curl_ingest_base.sh  curl_normalize_base.sh
tests/: conftest.py  test_agents.py  test_buildings.py  test_config.py  test_engine.py  test_health.py  test_web.py
(+151 files in other folders)
